fixed like button alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -178,6 +178,6 @@ a:hover {
 }
 
 .footer iframe {
-	margin-right: auto;
-	margin-left: auto;
+	margin-left: 190px;
+	
 }
